Corrected wrong alignment of flag icons

--- a/src/styles/flags.less
+++ b/src/styles/flags.less
@@ -15,7 +15,7 @@
 	width: @flag-icon-width;
 	height: 1em;
 	margin: unit( ( ( @line-height-base - 1 ) / 2 ), em ) 0;
-	line-height: 0;
+	line-height: 1;
 	background-repeat: no-repeat;
 	background-position: 50%;
 	background-size: contain;
